includes/css/style.css
/********************************************** 		
		CONTAINERS AND PARENT DIVS
***********************************************/
body {
	font-family: 'Open Sans', sans-serif; /*  font-weight: 400,600,800 */
}
#springydemo {
	z-index: 1000;
	position:relative;
	/* border-bottom: 3px solid #9DAEC1;
	border-right: 3px solid #9DAEC1; */
	
}
#canvas-outer {
	border-left: 1px solid #bbb;
	border-right: 1px solid #bbb;
	border-bottom: 1px solid #bbb;
}
#title-bar {
	z-index: 1001;
	background-color: #efefef;
	border-bottom: 1px solid #bbb;
	vertical-align: center;
	margin: 0px;
	padding: 20 0 0 10px;
	padding-left: 10px;
 	width: 100%;
}
.container {
	width: 100%;
	padding: 0px;
	margin: 0px;
	position: relative;
}
.content {
	width: 1000px;
	overflow: hidden;
	position: relative;
	text-align: center;
	margin-left: auto; margin-right: auto;
	padding: 0px;
	margin: 0px;
}

/********************************************** 		
		LEGEND AND RELATED STYLES
***********************************************/
#schemeTitle {
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	font-size: 18px; font-weight: 400;
	z-index: 999;
	position: absolute; /*newly added*/
    right: 5px; /*newly added*/
    top: 5px;
	float: left;
	text-align: left;
	width: auto; height: auto;
	opacity: 0.8;
	padding: 10 10 4 10px; 
	margin: 10px;
}

#notepad {
	z-index: 1001;
	position: absolute; /*newly added*/
    right: 5px; /*newly added*/
    bottom: 5px;
	float: left;
	text-align: left;
	max-width: 210px; width: auto; height: auto;
	opacity: 0.8;
	padding: 10 10 4 10px; 
	margin: 10px;
	/* background-color: rgba(100,200,200, 0.15); */

	font-family: 'Open Sans', sans-serif;
	font-size: 12px; font-weight: 400; 
}

#legend {
	z-index: 998;
	position: absolute; /*newly added*/
    left: 5px; /*newly added*/
    top: 5px;
	float: left;
	text-align: left;
	min-width: 120px; width: auto; height: auto;
	opacity: 0.8;
	padding: 6 2 2 6px; 
	margin: 6px;
	border: 1px solid #eee;
	background-color: rgba(200,200,200, 0.25);
	border-radius: 4px;
}
.legend-square {
	display: inline;
	border-bottom: 1px solid transparent;
	border-radius: 2px;
	width: 20px; min-width: 20px;
	height: 10px;
	margin-right: 6px;
}
ul {
	list-style-type: none;
	margin: 6 6 6 -40px;	/* top right bot left */
	padding-bottom: 4px;
}
li.legend {
	text-transform: capitalize;
	padding: 1px;
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	font-size: 11px; font-weight: 400; 
}
.faIcon {
	width: 20px;
	padding-left: 2px;
	padding-right: 4px;
}
.legend-header {
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	font-size: 11px; font-weight: 800;
}	
.legend-text {
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	font-size: 11px; font-weight: 400; 
}

/********************************************** 		
		USER INTERFACE (BUTTONS, ETC)
***********************************************/
button {
	padding: 6px;
	font-family: 'Open Sans', sans-serif;
	font-size: 12px; font-weight: 400; 
	font-size: 10px;
	font-weight: 600;
	border-radius: 5px;
	background-color: #FFF;
	border: 1px solid #333;
}
button:hover, button:focus { 
    background-color: #ccc;
}
button:active { 
    background-color: #888;
}

.buttonbar {
	padding: 10 16 10 4px;
	margin-top: 12px;
	margin-bottom: 12px;
}
.textBanner  {
	font-family: 'Open Sans', sans-serif;
	font-size: 36px; font-weight: 800; 
}
.textSubtitle {
	display: block;
	font-family: 'Open Sans', sans-serif;
	font-size: 18px; font-weight: 400;  line-height: 14px;
}
hr {
	border: 1px;
	background: #333;
}

hr.hr-dashed {
	display: inline-block;
	border: none;
	border-top: 2px dotted #333;
	color:#fff;
	background-color: transparent;
	height: 2px;
	width: 24px;
	margin-right: 8px;
}

hr.hr-solid {
	display: inline-block;
	border: none;
	border-top: 2px solid #333;
	color: #fff;
	background-color: transparent;
	height: 2px;
	width: 24px;
	margin-right: 8px;
}

